@@ -2,15 +2,15 @@ package org.sagebionetworks.table.worker;
 
 import java.io.IOException;
 import java.io.InputStreamReader;
-import java.io.Reader;
 import java.util.LinkedList;
 import java.util.List;
-import java.util.concurrent.Callable;
 
 import org.apache.commons.io.input.CountingInputStream;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 import org.sagebionetworks.asynchronous.workers.sqs.MessageUtils;
+import org.sagebionetworks.asynchronous.workers.sqs.Worker;
+import org.sagebionetworks.asynchronous.workers.sqs.WorkerProgress;
 import org.sagebionetworks.repo.manager.UserManager;
 import org.sagebionetworks.repo.manager.asynch.AsynchJobStatusManager;
 import org.sagebionetworks.repo.manager.file.FileHandleManager;
@@ -19,11 +19,14 @@ import org.sagebionetworks.repo.model.UserInfo;
 import org.sagebionetworks.repo.model.asynch.AsynchronousJobStatus;
 import org.sagebionetworks.repo.model.dbo.dao.table.CSVToRowIterator;
 import org.sagebionetworks.repo.model.file.S3FileHandle;
-import org.sagebionetworks.repo.model.table.AsynchUploadRequestBody;
-import org.sagebionetworks.repo.model.table.AsynchUploadResponseBody;
 import org.sagebionetworks.repo.model.table.ColumnModel;
+import org.sagebionetworks.repo.model.table.UploadToTableRequest;
+import org.sagebionetworks.repo.model.table.UploadToTableResult;
 import org.sagebionetworks.schema.adapter.JSONObjectAdapterException;
+import org.sagebionetworks.table.cluster.utils.TableModelUtils;
+import org.sagebionetworks.util.ProgressCallback;
 import org.sagebionetworks.util.csv.CsvNullReader;
+import org.springframework.beans.factory.annotation.Autowired;
 
 import com.amazonaws.services.s3.AmazonS3Client;
 import com.amazonaws.services.s3.model.ObjectMetadata;
@@ -35,29 +38,31 @@ import com.amazonaws.services.sqs.model.Message;
  * @author jmhill
  *
  */
-public class TableCSVAppenderWorker implements Callable<List<Message>> {
+public class TableCSVAppenderWorker implements Worker {
 
 	static private Logger log = LogManager.getLogger(TableCSVAppenderWorker.class);
-
-	private AsynchJobStatusManager asynchJobStatusManager;
-	private TableRowManager tableRowManager;
-	private FileHandleManager fileHandleManger;
-	private UserManager userManger;
-	private AmazonS3Client s3Client;
 	private List<Message> messages;
+	private WorkerProgress workerProgress;
 
-	public TableCSVAppenderWorker(
-			AsynchJobStatusManager asynchJobStatusManager,
-			TableRowManager tableRowManager,
-			FileHandleManager fileHandleManger, UserManager userManger,
-			AmazonS3Client s3Client, List<Message> messages) {
-		super();
-		this.asynchJobStatusManager = asynchJobStatusManager;
-		this.tableRowManager = tableRowManager;
-		this.fileHandleManger = fileHandleManger;
-		this.userManger = userManger;
-		this.s3Client = s3Client;
+	@Autowired
+	private AsynchJobStatusManager asynchJobStatusManager;
+	@Autowired
+	private TableRowManager tableRowManager;
+	@Autowired
+	private UserManager userManger;
+	@Autowired
+	private FileHandleManager fileHandleManager;
+	@Autowired
+	private AmazonS3Client s3Client;
+
+	@Override
+	public void setMessages(List<Message> messages) {
 		this.messages = messages;
+	}
+
+	@Override
+	public void setWorkerProgress(WorkerProgress workerProgress) {
+		this.workerProgress = workerProgress;
 	}
 
 	@Override
@@ -85,7 +90,7 @@ public class TableCSVAppenderWorker implements Callable<List<Message>> {
 	public Message processMessage(Message message) throws Throwable{
 		// First read the body
 		AsynchronousJobStatus status = extractStatus(message);
-		processStatus(status);
+		processStatus(message, status);
 		return message;
 	}
 
@@ -93,13 +98,13 @@ public class TableCSVAppenderWorker implements Callable<List<Message>> {
 	 * @param status
 	 * @throws Throwable 
 	 */
-	public void processStatus(AsynchronousJobStatus status) throws Throwable {
+	public void processStatus(final Message message, AsynchronousJobStatus status) throws Throwable {
 		CsvNullReader reader = null;
 		try{
 			UserInfo user = userManger.getUserInfo(status.getStartedByUserId());
-			AsynchUploadRequestBody body = (AsynchUploadRequestBody) status.getRequestBody();
+			UploadToTableRequest body = (UploadToTableRequest) status.getRequestBody();
 			// Get the filehandle
-			S3FileHandle fileHandle = (S3FileHandle) fileHandleManger.getRawFileHandle(user, body.getUploadFileHandleId());
+			S3FileHandle fileHandle = (S3FileHandle) fileHandleManager.getRawFileHandle(user, body.getUploadFileHandleId());
 			// Get the schema for the table
 			List<ColumnModel> tableSchema = tableRowManager.getColumnModelsForTable(body.getTableId());
 			// Get the metadat for this file
@@ -113,21 +118,31 @@ public class TableCSVAppenderWorker implements Callable<List<Message>> {
 			// This stream is used to keep track of the bytes read.
 			CountingInputStream countingInputStream = new CountingInputStream(s3Object.getObjectContent());
 			// Create a reader from the passed parameters
-			reader = createCSVReader(new InputStreamReader(countingInputStream, "UTF-8"), body);
+			reader = CSVUtils.createCSVReader(new InputStreamReader(countingInputStream, "UTF-8"), body.getCsvTableDescriptor(), body.getLinesToSkip());
 			// Reports progress back the caller.
 			// Report progress every 2 seconds.
 			long progressIntervalMs = 2000;
 			ProgressReporter progressReporter = new IntervalProgressReporter(status.getJobId(),fileMetadata.getContentLength(), countingInputStream, asynchJobStatusManager, progressIntervalMs);
 			// Create the iterator
-			CSVToRowIterator iterator = new CSVToRowIterator(tableSchema, reader);
+			boolean isFirstLineHeader = CSVUtils.isFirstRowHeader(body.getCsvTableDescriptor());
+			CSVToRowIterator iterator = new CSVToRowIterator(tableSchema, reader, isFirstLineHeader);
 			ProgressingIteratorProxy iteratorProxy = new  ProgressingIteratorProxy(iterator, progressReporter);
 			// Append the data to the table
-			String etag = tableRowManager.appendRowsAsStream(user, body.getTableId(), tableSchema, iteratorProxy, null, null);
+			String etag = tableRowManager.appendRowsAsStream(user, body.getTableId(),
+					TableModelUtils.createColumnModelColumnMapper(tableSchema, false), iteratorProxy, body.getUpdateEtag(), null,
+					new ProgressCallback<Long>() {
+
+				@Override
+				public void progressMade(Long count) {
+					if(workerProgress != null){
+						workerProgress.progressMadeForMessage(message);
+					}
+				}});
 			// Done
-			AsynchUploadResponseBody response = new AsynchUploadResponseBody();
-			response.setRowsProcessed(new Long(progressReporter.getRowNumber()+1));
-			response.setEtag(etag);
-			asynchJobStatusManager.setComplete(status.getJobId(), response);
+			UploadToTableResult result = new UploadToTableResult();
+			result.setRowsProcessed(Long.valueOf(progressReporter.getRowNumber() + 1));
+			result.setEtag(etag);
+			asynchJobStatusManager.setComplete(status.getJobId(), result);
 		}catch(Throwable e){
 			// Record the error
 			asynchJobStatusManager.setJobFailed(status.getJobId(), e);
@@ -157,48 +172,11 @@ public class TableCSVAppenderWorker implements Callable<List<Message>> {
 		if(status.getRequestBody() == null){
 			throw new IllegalArgumentException("Job body cannot be null");
 		}
-		if(!(status.getRequestBody() instanceof AsynchUploadRequestBody)){
-			throw new IllegalArgumentException("Expected a job body of type: "+AsynchUploadRequestBody.class.getName()+" but received: "+status.getRequestBody().getClass().getName());
+		if (!(status.getRequestBody() instanceof UploadToTableRequest)) {
+			throw new IllegalArgumentException("Expected a job body of type: " + UploadToTableRequest.class.getName() + " but received: "
+					+ status.getRequestBody().getClass().getName());
 		}
 		return status;
-	}
-	
-	/**
-	 * Create CsvNullReader with the correct parameters using the provided parameters or default values.
-	 * @param reader
-	 * @param body
-	 * @param contentType
-	 * @return
-	 */
-	public static CsvNullReader createCSVReader(Reader reader, AsynchUploadRequestBody body){
-		if(body == null) throw new IllegalArgumentException("AsynchUploadRequestBody cannot be null");
-		char separator = CsvNullReader.DEFAULT_SEPARATOR;
-		char quotechar = CsvNullReader.DEFAULT_QUOTE_CHARACTER;
-		char escape = CsvNullReader.DEFAULT_ESCAPE_CHARACTER;
-		int skipLines = CsvNullReader.DEFAULT_SKIP_LINES;
-		if(body.getSeparator() != null){
-			if(body.getSeparator().length() != 1){
-				throw new IllegalArgumentException("AsynchUploadRequestBody.separator must be exactly one character.");
-			}
-			separator = body.getSeparator().charAt(0);
-		}
-		if(body.getQuoteCharacter() != null){
-			if(body.getQuoteCharacter().length() != 1){
-				throw new IllegalArgumentException("AsynchUploadRequestBody.quoteCharacter must be exactly one character.");
-			}
-			quotechar = body.getQuoteCharacter().charAt(0);
-		}
-		if(body.getEscapeCharacter() != null){
-			if(body.getEscapeCharacter().length() != 1){
-				throw new IllegalArgumentException("AsynchUploadRequestBody.escapeCharacter must be exactly one character.");
-			}
-			escape = body.getEscapeCharacter().charAt(0);
-		}
-		if(body.getLinesToSkip() != null){
-			skipLines = body.getLinesToSkip().intValue();
-		}
-		// Create the reader.
-		return new CsvNullReader(reader, separator, quotechar, escape, skipLines);
 	}
 	
 }
